# material

./: .gitignore  .gitmodules
Chapter 02/00 Hello World/: CMakeLists.txt  cpp_phases.c  hello_world_preproc.c  main_C11.c  main_KandR_C.c  main_with_args.c
Chapter 02/01 IndexOf/: CMakeLists.txt  main.c
Chapter 02/02 Hard-Coded TPC-H Database/: CMakeLists.txt  main.c
Chapter 02/03 - Row Stores/: CMakeLists.txt  main.c
Chapter 02/03 - Row Stores/help/: exercice_helper.c  exercice_helper.h
Chapter 02/03 - Row Stores/include/: gs_field_type.h
Chapter 02/03 - Row Stores/src/: gs_field_type.c  gs_frag.c  gs_unsafe.c
Chapter 02/03 - Row Stores/src/frag_printers/: gs_console_printer.c
Chapter 02/03 - Row Stores/src/frags/: gs_frag_host_vm.c
Chapter 02/03 - Row Stores/tasks/reference/: reference_implementation.h  reference_scan_impl.h
Chapter 02/03 - Row Stores/tasks/task_1/: task_1.h  task_1_scan_impl.h
Chapter 02/03 - Row Stores/tasks/task_1_solution/: task_1.h  task_1_scan_impl.h
Chapter 02/03 - Row Stores/tasks/task_2/: task_2.h
